feat(students): finish students CRUD implementation

--- a/src/StudentManagement.Api/appsettings.Development.json
+++ b/src/StudentManagement.Api/appsettings.Development.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Jwt": {
+      "ExpiryHours": 6,
+      "ValidIssuers": [
+        "http://localhost:5066"
+      ],
+      "ValidAudiences": [
+        "http://localhost:5066"
+      ],
+      "IssuerSigningKeys": [
+        "LOeYx16u7hVmwQw9lfKfOfI+gso95TlP5mXZHkSUFK0="
+      ]
+    }
   }
 }
