--- a/src/StudentManagement.Api/StudentManagement.Api.csproj
+++ b/src/StudentManagement.Api/StudentManagement.Api.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\StudentManagement.Infrastructure\StudentManagement.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(AssemblyName).Test</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
